src/mytestParser.cpp

// Generated from mytestParser.g4 by ANTLR 4.9.3


#include "mytestParserListener.h"
#include "mytestParserVisitor.h"

#include "mytestParser.h"


using namespace antlrcpp;
using namespace antlr4;

mytestParser::mytestParser(TokenStream *input) : Parser(input) {
  _interpreter = new atn::ParserATNSimulator(this, _atn, _decisionToDFA, _sharedContextCache);
}

mytestParser::~mytestParser() {
  delete _interpreter;
}

std::string mytestParser::getGrammarFileName() const {
  return "mytestParser.g4";
}

const std::vector<std::string>& mytestParser::getRuleNames() const {
  return _ruleNames;
}

dfa::Vocabulary& mytestParser::getVocabulary() const {
  return _vocabulary;
}


//----------------- SpecContext ------------------------------------------------------------------

mytestParser::SpecContext::SpecContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

mytestParser::BpreContext* mytestParser::SpecContext::bpre() {
  return getRuleContext<mytestParser::BpreContext>(0);
}

mytestParser::BposContext* mytestParser::SpecContext::bpos() {
  return getRuleContext<mytestParser::BposContext>(0);
}


size_t mytestParser::SpecContext::getRuleIndex() const {
  return mytestParser::RuleSpec;
}

void mytestParser::SpecContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<mytestParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterSpec(this);
}

void mytestParser::SpecContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<mytestParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitSpec(this);
}


antlrcpp::Any mytestParser::SpecContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<mytestParserVisitor*>(visitor))
    return parserVisitor->visitSpec(this);
  else
    return visitor->visitChildren(this);
}

mytestParser::SpecContext* mytestParser::spec() {
  SpecContext *_localctx = _tracker.createInstance<SpecContext>(_ctx, getState());
  enterRule(_localctx, 0, mytestParser::RuleSpec);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(42);
    bpre();
    setState(43);
    bpos();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- BpreContext ------------------------------------------------------------------

mytestParser::BpreContext::BpreContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* mytestParser::BpreContext::LBRAC() {
  return getToken(mytestParser::LBRAC, 0);
}

mytestParser::Abexp_atomContext* mytestParser::BpreContext::abexp_atom() {
  return getRuleContext<mytestParser::Abexp_atomContext>(0);
}

tree::TerminalNode* mytestParser::BpreContext::VBAR() {
  return getToken(mytestParser::VBAR, 0);
}

mytestParser::Rbexp_atomContext* mytestParser::BpreContext::rbexp_atom() {
  return getRuleContext<mytestParser::Rbexp_atomContext>(0);
}

tree::TerminalNode* mytestParser::BpreContext::RBRAC() {
  return getToken(mytestParser::RBRAC, 0);
}


size_t mytestParser::BpreContext::getRuleIndex() const {
  return mytestParser::RuleBpre;
}

void mytestParser::BpreContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<mytestParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterBpre(this);
}

void mytestParser::BpreContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<mytestParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitBpre(this);
}


antlrcpp::Any mytestParser::BpreContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<mytestParserVisitor*>(visitor))
    return parserVisitor->visitBpre(this);
  else
    return visitor->visitChildren(this);
}

mytestParser::BpreContext* mytestParser::bpre() {
  BpreContext *_localctx = _tracker.createInstance<BpreContext>(_ctx, getState());
  enterRule(_localctx, 2, mytestParser::RuleBpre);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(45);
    match(mytestParser::LBRAC);
    setState(46);
    abexp_atom();
    setState(47);
    match(mytestParser::VBAR);
    setState(48);
    rbexp_atom();
    setState(49);
    match(mytestParser::RBRAC);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- BposContext ------------------------------------------------------------------

mytestParser::BposContext::BposContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* mytestParser::BposContext::LBRAC() {
  return getToken(mytestParser::LBRAC, 0);
}

mytestParser::Abexp_prove_withContext* mytestParser::BposContext::abexp_prove_with() {
  return getRuleContext<mytestParser::Abexp_prove_withContext>(0);
}

tree::TerminalNode* mytestParser::BposContext::VBAR() {
  return getToken(mytestParser::VBAR, 0);
}

mytestParser::Rbexp_prove_withContext* mytestParser::BposContext::rbexp_prove_with() {
  return getRuleContext<mytestParser::Rbexp_prove_withContext>(0);
}

tree::TerminalNode* mytestParser::BposContext::RBRAC() {
  return getToken(mytestParser::RBRAC, 0);
}


size_t mytestParser::BposContext::getRuleIndex() const {
  return mytestParser::RuleBpos;
}

void mytestParser::BposContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<mytestParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterBpos(this);
}

void mytestParser::BposContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<mytestParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitBpos(this);
}


antlrcpp::Any mytestParser::BposContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<mytestParserVisitor*>(visitor))
    return parserVisitor->visitBpos(this);
  else
    return visitor->visitChildren(this);
}

mytestParser::BposContext* mytestParser::bpos() {
  BposContext *_localctx = _tracker.createInstance<BposContext>(_ctx, getState());
  enterRule(_localctx, 4, mytestParser::RuleBpos);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(51);
    match(mytestParser::LBRAC);
    setState(52);
    abexp_prove_with();
    setState(53);
    match(mytestParser::VBAR);
    setState(54);
    rbexp_prove_with();
    setState(55);
    match(mytestParser::RBRAC);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Abexp_atomContext ------------------------------------------------------------------

mytestParser::Abexp_atomContext::Abexp_atomContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}


size_t mytestParser::Abexp_atomContext::getRuleIndex() const {
  return mytestParser::RuleAbexp_atom;
}

void mytestParser::Abexp_atomContext::copyFrom(Abexp_atomContext *ctx) {
  ParserRuleContext::copyFrom(ctx);
}

//----------------- A_eqmodContext ------------------------------------------------------------------

tree::TerminalNode* mytestParser::A_eqmodContext::EQMOD() {
  return getToken(mytestParser::EQMOD, 0);
}

std::vector<mytestParser::AexpContext *> mytestParser::A_eqmodContext::aexp() {
  return getRuleContexts<mytestParser::AexpContext>();
}

mytestParser::AexpContext* mytestParser::A_eqmodContext::aexp(size_t i) {
  return getRuleContext<mytestParser::AexpContext>(i);
}

mytestParser::A_eqmodContext::A_eqmodContext(Abexp_atomContext *ctx) { copyFrom(ctx); }

void mytestParser::A_eqmodContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<mytestParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterA_eqmod(this);
}
void mytestParser::A_eqmodContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<mytestParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitA_eqmod(this);
}

antlrcpp::Any mytestParser::A_eqmodContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<mytestParserVisitor*>(visitor))
    return parserVisitor->visitA_eqmod(this);
  else
    return visitor->visitChildren(this);
}
//----------------- A_eqContext ------------------------------------------------------------------

tree::TerminalNode* mytestParser::A_eqContext::EQ() {
  return getToken(mytestParser::EQ, 0);
}

std::vector<mytestParser::AexpContext *> mytestParser::A_eqContext::aexp() {
  return getRuleContexts<mytestParser::AexpContext>();
}

mytestParser::AexpContext* mytestParser::A_eqContext::aexp(size_t i) {
  return getRuleContext<mytestParser::AexpContext>(i);
}

mytestParser::A_eqContext::A_eqContext(Abexp_atomContext *ctx) { copyFrom(ctx); }

void mytestParser::A_eqContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<mytestParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterA_eq(this);
}
void mytestParser::A_eqContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<mytestParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitA_eq(this);
}

antlrcpp::Any mytestParser::A_eqContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<mytestParserVisitor*>(visitor))
    return parserVisitor->visitA_eq(this);
  else
    return visitor->visitChildren(this);
}
//----------------- A_parensContext ------------------------------------------------------------------

tree::TerminalNode* mytestParser::A_parensContext::LPAR() {
  return getToken(mytestParser::LPAR, 0);
}

mytestParser::Abexp_atomContext* mytestParser::A_parensContext::abexp_atom() {
  return getRuleContext<mytestParser::Abexp_atomContext>(0);
}

tree::TerminalNode* mytestParser::A_parensContext::RPAR() {
  return getToken(mytestParser::RPAR, 0);
}

mytestParser::A_parensContext::A_parensContext(Abexp_atomContext *ctx) { copyFrom(ctx); }

void mytestParser::A_parensContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<mytestParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterA_parens(this);
}
void mytestParser::A_parensContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<mytestParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitA_parens(this);
}

antlrcpp::Any mytestParser::A_parensContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<mytestParserVisitor*>(visitor))
    return parserVisitor->visitA_parens(this);
  else
    return visitor->visitChildren(this);
}
//----------------- A_andContext ------------------------------------------------------------------

tree::TerminalNode* mytestParser::A_andContext::AND() {
  return getToken(mytestParser::AND, 0);
}

tree::TerminalNode* mytestParser::A_andContext::LSQUARE() {
  return getToken(mytestParser::LSQUARE, 0);
}

mytestParser::AbexpsContext* mytestParser::A_andContext::abexps() {
  return getRuleContext<mytestParser::AbexpsContext>(0);
}

tree::TerminalNode* mytestParser::A_andContext::RSQUARE() {
  return getToken(mytestParser::RSQUARE, 0);
}

mytestParser::A_andContext::A_andContext(Abexp_atomContext *ctx) { copyFrom(ctx); }

void mytestParser::A_andContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<mytestParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterA_and(this);
}
void mytestParser::A_andContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<mytestParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitA_and(this);
}

antlrcpp::Any mytestParser::A_andContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<mytestParserVisitor*>(visitor))
    return parserVisitor->visitA_and(this);
  else
    return visitor->visitChildren(this);
}
//----------------- A_trueContext ------------------------------------------------------------------

tree::TerminalNode* mytestParser::A_trueContext::TRUE() {
  return getToken(mytestParser::TRUE, 0);
}

mytestParser::A_trueContext::A_trueContext(Abexp_atomContext *ctx) { copyFrom(ctx); }

void mytestParser::A_trueContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<mytestParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterA_true(this);
}
void mytestParser::A_trueContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<mytestParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitA_true(this);
}

antlrcpp::Any mytestParser::A_trueContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<mytestParserVisitor*>(visitor))
    return parserVisitor->visitA_true(this);
  else
    return visitor->visitChildren(this);
}
//----------------- A_eqopContext ------------------------------------------------------------------

std::vector<mytestParser::AexpContext *> mytestParser::A_eqopContext::aexp() {
  return getRuleContexts<mytestParser::AexpContext>();
}

mytestParser::AexpContext* mytestParser::A_eqopContext::aexp(size_t i) {
  return getRuleContext<mytestParser::AexpContext>(i);
}

tree::TerminalNode* mytestParser::A_eqopContext::EQOP() {
  return getToken(mytestParser::EQOP, 0);
}

mytestParser::A_eqopContext::A_eqopContext(Abexp_atomContext *ctx) { copyFrom(ctx); }

void mytestParser::A_eqopContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<mytestParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterA_eqop(this);
}
void mytestParser::A_eqopContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<mytestParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitA_eqop(this);
}

antlrcpp::Any mytestParser::A_eqopContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<mytestParserVisitor*>(visitor))
    return parserVisitor->visitA_eqop(this);
  else
    return visitor->visitChildren(this);
}
mytestParser::Abexp_atomContext* mytestParser::abexp_atom() {
  Abexp_atomContext *_localctx = _tracker.createInstance<Abexp_atomContext>(_ctx, getState());
  enterRule(_localctx, 6, mytestParser::RuleAbexp_atom);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(80);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 0, _ctx)) {
    case 1: {
      _localctx = _tracker.createInstance<mytestParser::A_trueContext>(_localctx);
      enterOuterAlt(_localctx, 1);
      setState(57);
      match(mytestParser::TRUE);
      break;
    }

    case 2: {
      _localctx = _tracker.createInstance<mytestParser::A_parensContext>(_localctx);
      enterOuterAlt(_localctx, 2);
      setState(58);
      match(mytestParser::LPAR);
      setState(59);
      abexp_atom();
      setState(60);
      match(mytestParser::RPAR);
      break;
    }

    case 3: {
      _localctx = _tracker.createInstance<mytestParser::A_eqContext>(_localctx);
      enterOuterAlt(_localctx, 3);
      setState(62);
      match(mytestParser::EQ);
      setState(63);
      aexp(0);
      setState(64);
      aexp(0);
      break;
    }

    case 4: {
      _localctx = _tracker.createInstance<mytestParser::A_eqmodContext>(_localctx);
      enterOuterAlt(_localctx, 4);
      setState(66);
      match(mytestParser::EQMOD);
      setState(67);
      aexp(0);
      setState(68);
      aexp(0);
      setState(69);
      aexp(0);
      break;
    }

    case 5: {
      _localctx = _tracker.createInstance<mytestParser::A_andContext>(_localctx);
      enterOuterAlt(_localctx, 5);
      setState(71);
      match(mytestParser::AND);
      setState(72);
      match(mytestParser::LSQUARE);
      setState(73);
      abexps();
      setState(74);
      match(mytestParser::RSQUARE);
      break;
    }

    case 6: {
      _localctx = _tracker.createInstance<mytestParser::A_eqopContext>(_localctx);
      enterOuterAlt(_localctx, 6);
      setState(76);
      aexp(0);
      setState(77);
      match(mytestParser::EQOP);
      setState(78);
      aexp(0);
      break;
    }

    default:
      break;
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- AexpContext ------------------------------------------------------------------

mytestParser::AexpContext::AexpContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}


size_t mytestParser::AexpContext::getRuleIndex() const {
  return mytestParser::RuleAexp;
}

void mytestParser::AexpContext::copyFrom(AexpContext *ctx) {
  ParserRuleContext::copyFrom(ctx);
}

//----------------- Adds_aexpContext ------------------------------------------------------------------

tree::TerminalNode* mytestParser::Adds_aexpContext::INST_ADD() {
  return getToken(mytestParser::INST_ADD, 0);
}

tree::TerminalNode* mytestParser::Adds_aexpContext::LSQUARE() {
  return getToken(mytestParser::LSQUARE, 0);
}

mytestParser::AexpsContext* mytestParser::Adds_aexpContext::aexps() {
  return getRuleContext<mytestParser::AexpsContext>(0);
}

tree::TerminalNode* mytestParser::Adds_aexpContext::RSQUARE() {
  return getToken(mytestParser::RSQUARE, 0);
}

mytestParser::Adds_aexpContext::Adds_aexpContext(AexpContext *ctx) { copyFrom(ctx); }

void mytestParser::Adds_aexpContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<mytestParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterAdds_aexp(this);
}
void mytestParser::Adds_aexpContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<mytestParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitAdds_aexp(this);
}

antlrcpp::Any mytestParser::Adds_aexpContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<mytestParserVisitor*>(visitor))
    return parserVisitor->visitAdds_aexp(this);
  else
    return visitor->visitChildren(this);
}
//----------------- Aexp_powContext ------------------------------------------------------------------

mytestParser::AexpContext* mytestParser::Aexp_powContext::aexp() {
  return getRuleContext<mytestParser::AexpContext>(0);
}

tree::TerminalNode* mytestParser::Aexp_powContext::POWOP() {
  return getToken(mytestParser::POWOP, 0);
}

mytestParser::NumContext* mytestParser::Aexp_powContext::num() {
  return getRuleContext<mytestParser::NumContext>(0);
}

mytestParser::Aexp_powContext::Aexp_powContext(AexpContext *ctx) { copyFrom(ctx); }

void mytestParser::Aexp_powContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<mytestParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterAexp_pow(this);
}
void mytestParser::Aexp_powContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<mytestParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitAexp_pow(this);
}

antlrcpp::Any mytestParser::Aexp_powContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<mytestParserVisitor*>(visitor))
    return parserVisitor->visitAexp_pow(this);
  else
    return visitor->visitChildren(this);
}
//----------------- A_scContext ------------------------------------------------------------------

mytestParser::Simple_constContext* mytestParser::A_scContext::simple_const() {
  return getRuleContext<mytestParser::Simple_constContext>(0);
}

mytestParser::A_scContext::A_scContext(AexpContext *ctx) { copyFrom(ctx); }

void mytestParser::A_scContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<mytestParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterA_sc(this);
}
void mytestParser::A_scContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<mytestParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitA_sc(this);
}

antlrcpp::Any mytestParser::A_scContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<mytestParserVisitor*>(visitor))
    return parserVisitor->visitA_sc(this);
  else
    return visitor->visitChildren(this);
}
//----------------- Aexp_oprationsContext ------------------------------------------------------------------

std::vector<mytestParser::AexpContext *> mytestParser::Aexp_oprationsContext::aexp() {
  return getRuleContexts<mytestParser::AexpContext>();
}

mytestParser::AexpContext* mytestParser::Aexp_oprationsContext::aexp(size_t i) {
  return getRuleContext<mytestParser::AexpContext>(i);
}

tree::TerminalNode* mytestParser::Aexp_oprationsContext::MULOP() {
  return getToken(mytestParser::MULOP, 0);
}

tree::TerminalNode* mytestParser::Aexp_oprationsContext::ADDOP() {
  return getToken(mytestParser::ADDOP, 0);
}

tree::TerminalNode* mytestParser::Aexp_oprationsContext::SUBOP() {
  return getToken(mytestParser::SUBOP, 0);
}

mytestParser::Aexp_oprationsContext::Aexp_oprationsContext(AexpContext *ctx) { copyFrom(ctx); }

void mytestParser::Aexp_oprationsContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<mytestParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterAexp_oprations(this);
}
void mytestParser::Aexp_oprationsContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<mytestParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitAexp_oprations(this);
}

antlrcpp::Any mytestParser::Aexp_oprationsContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<mytestParserVisitor*>(visitor))
    return parserVisitor->visitAexp_oprations(this);
  else
    return visitor->visitChildren(this);
}
//----------------- Add_aexpContext ------------------------------------------------------------------

tree::TerminalNode* mytestParser::Add_aexpContext::INST_ADD() {
  return getToken(mytestParser::INST_ADD, 0);
}

std::vector<mytestParser::AexpContext *> mytestParser::Add_aexpContext::aexp() {
  return getRuleContexts<mytestParser::AexpContext>();
}

mytestParser::AexpContext* mytestParser::Add_aexpContext::aexp(size_t i) {
  return getRuleContext<mytestParser::AexpContext>(i);
}

mytestParser::Add_aexpContext::Add_aexpContext(AexpContext *ctx) { copyFrom(ctx); }

void mytestParser::Add_aexpContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<mytestParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterAdd_aexp(this);
}
void mytestParser::Add_aexpContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<mytestParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitAdd_aexp(this);
}

antlrcpp::Any mytestParser::Add_aexpContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<mytestParserVisitor*>(visitor))
    return parserVisitor->visitAdd_aexp(this);
  else
    return visitor->visitChildren(this);
}
//----------------- Aexp_limbsContext ------------------------------------------------------------------

tree::TerminalNode* mytestParser::Aexp_limbsContext::ULIMBS() {
  return getToken(mytestParser::ULIMBS, 0);
}

mytestParser::NumContext* mytestParser::Aexp_limbsContext::num() {
  return getRuleContext<mytestParser::NumContext>(0);
}

tree::TerminalNode* mytestParser::Aexp_limbsContext::LSQUARE() {
  return getToken(mytestParser::LSQUARE, 0);
}

mytestParser::AexpsContext* mytestParser::Aexp_limbsContext::aexps() {
  return getRuleContext<mytestParser::AexpsContext>(0);
}

tree::TerminalNode* mytestParser::Aexp_limbsContext::RSQUARE() {
  return getToken(mytestParser::RSQUARE, 0);
}

mytestParser::Aexp_limbsContext::Aexp_limbsContext(AexpContext *ctx) { copyFrom(ctx); }

void mytestParser::Aexp_limbsContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<mytestParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterAexp_limbs(this);
}
void mytestParser::Aexp_limbsContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<mytestParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitAexp_limbs(this);
}

antlrcpp::Any mytestParser::Aexp_limbsContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<mytestParserVisitor*>(visitor))
    return parserVisitor->visitAexp_limbs(this);
  else
    return visitor->visitChildren(this);
}
//----------------- Sq_aexpContext ------------------------------------------------------------------

tree::TerminalNode* mytestParser::Sq_aexpContext::INST_SQ() {
  return getToken(mytestParser::INST_SQ, 0);
}

mytestParser::AexpContext* mytestParser::Sq_aexpContext::aexp() {
  return getRuleContext<mytestParser::AexpContext>(0);
}

mytestParser::Sq_aexpContext::Sq_aexpContext(AexpContext *ctx) { copyFrom(ctx); }

void mytestParser::Sq_aexpContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<mytestParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterSq_aexp(this);
}
void mytestParser::Sq_aexpContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<mytestParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitSq_aexp(this);
}

antlrcpp::Any mytestParser::Sq_aexpContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<mytestParserVisitor*>(visitor))
    return parserVisitor->visitSq_aexp(this);
  else
    return visitor->visitChildren(this);
}
//----------------- Sub_aexpContext ------------------------------------------------------------------

tree::TerminalNode* mytestParser::Sub_aexpContext::INST_SUB() {
  return getToken(mytestParser::INST_SUB, 0);
}

std::vector<mytestParser::AexpContext *> mytestParser::Sub_aexpContext::aexp() {
  return getRuleContexts<mytestParser::AexpContext>();
}

mytestParser::AexpContext* mytestParser::Sub_aexpContext::aexp(size_t i) {
  return getRuleContext<mytestParser::AexpContext>(i);
}

mytestParser::Sub_aexpContext::Sub_aexpContext(AexpContext *ctx) { copyFrom(ctx); }

void mytestParser::Sub_aexpContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<mytestParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterSub_aexp(this);
}
void mytestParser::Sub_aexpContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<mytestParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitSub_aexp(this);
}
